network-policies/db-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
    - "Egress"

  egress:
    - to:
      - ipBlock:
          cidr: 192.168.5.10/32

      ports:
        - port: 80
          protocol: tcp
