network-policies/test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal

  policyTypes:
    - "Egress"

  egress:
    - to:
      - podSelector:
          matchLabels:
            name: payroll

      ports:
        - port: 8080
          protocol: tcp

    - to:
      - podSelector:
          matchLabels:
            name: mysql

      ports:
        - port: 3306
          protocol: tcp
